# enk

./: DESCRIPTION.rst  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml
enk/: console.py  filegen.py  process.py
tests/: console_test.py  filegen_test.py  process_test.py
