[project]
name = "enk"
version = "0.3"
description = "Various Python utilities."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
authors = [
  { name = "Paul Moore", email = "p.f.moore@gmail.com" },
]
keywords = ["utilities", "development"]
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/pfmoore/enk"
Source = "https://github.com/pfmoore/enk"

[build-system]
requires = ["flit_core >=3.3"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["tests"]
